Fix chrome video flickering when the fixed nav bar passed over it

--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -2718,6 +2718,8 @@ a.copy-to-clipboard
 nav.navbar.navbar-default ul.navbar-center.non-cycle li
   @media (max-width: $screen-xs-max)
     display: block
+.navbar-fixed-top
+  transform: translateZ(0)
 .navbar-fixed-top .navbar-collapse
   @media (max-width: $screen-xs-max)
     background-color: $color-dark-grey
